--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal"> 
             <button class="backdrop-icon" type="button" data-modal-close>
-                <svg width="11px" height="11px">
-                    <use href="./image/svg/sprite.svg#icon-close" ></use>
+                <svg width="11px" height="11px" class="backdrop-icon-svg">
+                    <use href="./image/svg/icons.svg#icon-close" ></use>
                 </svg>
             </button> 
 
